agregando nodos al DOM

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Nodos en DOM</title>
+</head>
+<body>
+	<h1 id="titulo">Nodos en DOM con JS</h1>
+	<div id="subtitulo"></div>
+	<p>1.- Lorem ipsum <b>dolor</b> sit amet, consectetur adipisicing elit.</p>
+	<p id="segundo">2.- Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+	<p>3.- Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+	<script src="js/script.js"></script>
+</body>
+</html>
